@@ -5,6 +5,7 @@ Version 1.2.6
 - fixed catalog I/O to correctly handle automatic comments (Tim Dijkstra)
 - [Win32] visual improvements to main window (Tim Kosse)
 - usability improvements
+- fixed storing of non-ASCII catalog headers
 - added more translations:
      Punjabi (Amanpreet Singh Alam)
      Albanian (Besnik Bleta)
